syntax = "proto3";
package rook.claim;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/bank/v1beta1/genesis.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "rook/claim/claim.proto";

option go_package = "github.com/rook-network/rook/x/claim/types";

// GenesisState defines the claim module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];

  // list of claim records, one for every airdrop recipient
  repeated ClaimRecord claim_records = 2 [
    (gogoproto.moretags) = "yaml:\"claim_records\"",
    (gogoproto.nullable) = false
  ];
}
